fix(auth): update searchParams type for ResetPasswordPage and improve alignment in SCSS

--- a/src/styles/components/auth/auth.scss
+++ b/src/styles/components/auth/auth.scss
@@ -34,7 +34,7 @@
     &__forgot {
       display: flex;
       justify-content: space-between;
-      align-items: start;
+      align-items: flex-start;
       padding: 0.5rem;
 
       &__errors {
